# neurosync_player_pkg

./: README.md  pyproject.toml  update_player.sh
